<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNumA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/number_a_hint"
        android:inputType="numberDecimal" />


    <EditText
        android:id="@+id/etNumB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/number_b_hint"
        android:inputType="numberDecimal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sumar"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btnRestar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_restar"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/txt_resultado"
        android:textSize="18sp" />


</LinearLayout>

